# src/http/api/podcasts.rs
@@ -1,11 +1,15 @@
 use axum::{
-    extract::{Path, State},
+    extract::{Path, Query, State},
     routing::get,
     Json, Router,
 };
+use base64::prelude::*;
+use chrono::{DateTime, Utc};
 use serde::Deserialize;
+use serde::Serialize;
 
 use crate::{
+    app::CursorPagination,
     http::{
         auth::ApiUser,
         errors::{AppError, JsonAppError},
@@ -63,11 +67,63 @@ async fn add_podcast(
 async fn list_episodes(
     user: ApiUser,
     State(state): State<AppState>,
+    Query(params): Query<EpisodeListParams>,
     Path(podcast_id): Path<String>,
-) -> Result<Json<Vec<EpisodeWithProgress>>, JsonAppError> {
-    let episodes = state
+) -> Result<Json<EpisodePage>, JsonAppError> {
+    let pagination = params.to_pagination()?;
+    let mut episodes = state
         .app
-        .get_episodes_with_progress(&user.username, &podcast_id)
+        .get_episodes_with_progress(&user.username, &podcast_id, Some(pagination))
         .await?;
-    Ok(Json(episodes))
+    let next_page_token = episodes
+        .last()
+        .map(|ep| encode_page_token(ep.episode.publication_date));
+
+    Ok(Json(EpisodePage {
+        items: episodes,
+        next_page_token,
+    }))
+}
+
+#[derive(Deserialize)]
+struct EpisodeListParams {
+    per_page: Option<u32>,
+    page_token: Option<String>,
+}
+
+impl EpisodeListParams {
+    fn to_pagination(&self) -> Result<CursorPagination, JsonAppError> {
+        let per_page = self.per_page.unwrap_or(20).clamp(1, 100);
+        let cursor = match &self.page_token {
+            Some(token) => Some(decode_page_token(token)?),
+            None => None,
+        };
+
+        Ok(CursorPagination {
+            limit: per_page as i64,
+            cursor,
+        })
+    }
+}
+
+fn decode_page_token(token: &str) -> Result<DateTime<Utc>, JsonAppError> {
+    let decoded = BASE64_STANDARD
+        .decode(token.as_bytes())
+        .map_err(|_| AppError::OptionError)?;
+    let s = String::from_utf8(decoded).map_err(|_| AppError::OptionError)?;
+    let dt = DateTime::parse_from_rfc3339(&s)
+        .map_err(|_| AppError::OptionError)?
+        .with_timezone(&Utc);
+    Ok(dt)
+}
+
+fn encode_page_token(dt: DateTime<Utc>) -> String {
+    let as_str = dt.to_rfc3339();
+    BASE64_STANDARD.encode(as_str.as_bytes())
+}
+
+#[derive(Serialize)]
+struct EpisodePage {
+    items: Vec<EpisodeWithProgress>,
+    next_page_token: Option<String>,
 }
